<resources>
    <string name="app_name">Inviare</string>
    <string name="hello_world">Hello world!</string>
    <string name="id_propietario">-1</string>
    <!-- SharedPreferences / Preferences. -->
    <string name="shared_preferences">shared_preferences</string>
    <string name="preferences_sesion_iniciada">sesion_iniciada</string>
    <string name="preferences_nombre_perfil">nombre_perfil</string>
    <string name="preferences_telefono_perfil">telefono_perfil</string>
    <string name="preferences_email_perfil">email_perfil</string>
    <string name="preferences_estado_perfil">estado_perfil</string>
    <string name="preferences_imagen_perfil">imagen_perfil</string>
    <string name="preferences_usuario_acceso_directo">usuario_acceso_directo</string>
    <string name="preferences_sonido_notificacion">sonido_notificacion</string>
    <string name="preferences_horario_nocturno">horario_nocturno</string>
    <string name="preferences_horario_nocturno_hora_inicio">horario_nocturno_inicio</string>
    <string name="preferences_horario_nocturno_hora_final">horario_nocturno_final</string>
    <string name="preferences_led_notificacion">led_notificacion</string>
    <string name="preferences_anclar_chat_personal">anclar_chat_personal</string>

    <!-- Intents (Extras). -->
    <string name="intent_conversacion_id">id_conversacion</string>
    <string name="intent_conversacion_titulo">titulo_conversacion</string>
    <string name="intent_conversacion_posicion_array">c_posicion_array</string>
    <string name="intent_mensaje_fecha">m_fecha</string>
    <string name="intent_alarma_codigo">codigo_alarma</string>
    <string name="intent_alarma_mensaje">mensaje</string>
    <string name="intent_alarma_fecha">fecha</string>
    <string name="intent_alarma_tipo">tipo_alarma</string>
    <string name="intent_alarma_hora_inicio">hora_inicio</string>
    <string name="intent_alarma_hora_duracion">hora_duracion</string>
    <string name="intent_alarma_duracion_milisegundos">duracion_milisegundos</string>
    <string name="intent_alarma_dia">dia_alarma</string>
    <string name="intent_alarma_frecuencia">frecuencia</string>
    <string name="intent_empezar_notificacion_bool">empezarNotificacion</string>

    <!-- Permisos. -->
    <string name="permisos_sin_permiso">No se ha asignado ningún permiso.</string>
    <string name="permisos_pedir_contactos">Se necesita acceso a los Contactos</string>
    <string name="permisos_pedir_lectura">Se necesita acceso al Almacenamiento Externo</string>
    <string name="permisos_confirma_contactos">Por favor, confirma el acceso los Contactos</string>
    <string name="permisos_confirma_lectura">Por favor, confirma el acceso al Almacenamiento Externo</string>

    <!-- Dialog. -->
    <string name="dialog_eliminar_DB_titulo">¿Realmente desea eliminar todos los datos de la aplicación?</string>
    <string name="dialog_eliminar_DB">Se borrarán todas las conversaciones guardadas en el dispositivo</string>
    <string name="dialog_de_acuerdo">De acuerdo</string>
    <string name="dialog_si">Sí</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancelar">Cancelar</string>
    <string name="dialog_declinar_tarea_titulo">Rechazar tarea</string>
    <string name="dialog_mensaje_declinar_tarea">Lo siento, no puedo realizar esta tarea.</string>
    <string name="dialog_tarea_realizada_titulo">¿Ya has realizado esta tarea?</string>
    <string name="dialog_tarea_realizada">Esta tarea se marcará como realizada de manera irreversible.</string>
    <string name="dialog_declinar_tarea">Rechazar</string>

    <!-- SimpleDateFormat. -->
    <string name="simple_date_format_DB">dd MM yyyy, HH:mm:ss</string>
    <string name="simple_date_format_MENSAJE">dd-MM-yyyy, HH:mm</string>
    <string name="simple_date_format_CONTACTO">dd MMMM yyyy, HH:mm</string>
    <string name="simple_date_format_FECHA">dd-MM-yyyy</string>
    <string name="simple_date_format_HORA">HH:mm</string>

    <!-- Menu. -->
    <string name="menu_desactivar_silencio">Desactivar silencio</string>
    <string name="menu_desactivar_bloqueo">Desbloquear contacto</string>

    <!-- ServicioAlarmas. -->
    <string name="local_service_started">servicio_empezado</string>
    <string name="local_service_stopped">servicio_detenido</string>

    <string name="servicio_empezar">servicio_empezado</string>
    <string name="servicio_terminar">servicio_detenido</string>

    <!--Mensajes registro-->
    <string name="campos_vacios">Por favor, rellena los campos vacios</string>
    <string name="error_login">Error al iniciar sesión</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <!-- Labels Registro. -->
    <string name="label_nombre">Nombre</string>
    <string name="label_email">E-mail</string>
    <string name="label_contraseña">Contraseña</string>
    <string name="label_telefono">Telefono</string>

    <!--Tags Firebase-->
    <string name="TABLE_CONTACTOS">contactos</string>
    <string name="TABLE_MENSAJES">conversaciones</string>
    <string name="TABLE_ALARMAS">alarmas</string>

    <string name="title_activity_alarmas">Enviar notificación</string>
    <string name="title_activity_alarma">Alarma</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="anyadir_contacto">Añadir contacto</string>
    <string name="ajustes">Ajustes</string>
    <string name="silenciar">Silenciar</string>
    <string name="bloquear">Bloquear</string>
    <string name="actualizar">Actualizar</string>
    <string name="enviar">Alarma</string>
    <string name="perfil">Perfil</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="estado">Estado</string>
    <string name="guardar">GUARDAR</string>
    <string name="nombre_textview">Nombre:</string>
    <string name="estado_textview">Estado:</string>
    <string name="telefono_textview">Teléfono:</string>
    <string name="correo_electronico_textview">Correo electrónico:</string>
    <string name="acceso_directo_chat">Acceso directo</string>
    <string name="eliminar_mensajes">Eliminar mensajes</string>
    <string name="ajustes_t1">Notificación</string>
    <string name="ajustes_sonido_notificacion">Sonido</string>
    <string name="ajustes_sonido_descripcion">El móvil sonará al recibir una notificación</string>
    <string name="ajustes_sonido_noche">Horario nocturno</string>
    <string name="ajustes_nocturno_descripcion">El móvil no sonará por la noche</string>
    <string name="ajustes_t2">Contactos</string>
    <string name="ajustes_anclar_chat">Anclar chat personal</string>
    <string name="ajustes_anclar_chat_descripcion">Situar el chat personal como primer contacto</string>
    <string name="ajustes_led">Led de notificación</string>
    <string name="ajustes_led_descripcion">Activar led de notificación</string>
    <string name="ajustes_permisos_contactos">Permisos</string>
    <string name="ajustes_permisos_descripcion">Administrar permisos de los contactos</string>
    <string name="ajustes_t3">General</string>
    <string name="ajustes_eliminar_DB">Eliminar datos de la aplicación</string>
    <string name="ajustes_eliminar_DB_descripcion">Se eliminarán todos los mensajes guardados en el dispositivo</string>
    <string name="lista_chat_hora_inicio_t">Realizar tarea a partir de:</string>
    <string name="lista_chat_hora_duracion_t">Terminar tarea antes de:</string>
    <string name="lista_chat_frecuencia">Avisar cada %1$s.</string>
    <string name="tarea_terminada">Hecho</string>
    <string name="declinar_tarea">Rechazar</string>
    <string name="tarea_realizada">Ya he realizado esta tarea</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="tipo_alarma_repetitiva">Alarma repetitiva</string>
    <string name="tipo_alarma_persistente">Alarma persistente</string>
    <string name="tipo_alarma_fija">Alarma fija</string>
    <string name="tipo_notificacion_persistente">Notificación persistente</string>
    <string name="eliminar_contacto">Eliminar contacto</string>
    <string name="eliminar">Eliminar</string>
    <string name="galeria">Galería</string>
    <string name="foto">Foto</string>
    <string name="contentDescription_imageViewContacto">Imagen de perfil del contacto</string>
    <string name="fecha_">Fecha:</string>
    <string name="text_duracion">Dura </string>
    <string name="text_inicio">Empieza en </string>
    <string name="text_frecuencia">Suena cada </string>
    <string name="alarma_finalizada">Alarma finalizada</string>
    <string name="aceptar">Aceptar</string>

    <string name="dia_lunes">Lunes</string>
    <string name="dia_martes">Martes</string>
    <string name="dia_miercoles">Miercoles</string>
    <string name="dia_jueves">Jueves</string>
    <string name="dia_viernes">Viernes</string>
    <string name="dia_sabado">Sabado</string>
    <string name="dia_domingo">Domingo</string>
    <string name="tipo_repetitiva">Repetitiva</string>
    <string name="tipo_persistente">Persistente</string>
    <string name="tipo_fija">Fija</string>
    <string name="conversacion_escribir_mensaje">Escribir mensaje</string>
    <string name="fracuencia_">Frecuencia:</string>
    <string name="instantanea">Instantanea</string>
    <string name="alarma_fecha">Fecha: %1$s</string>
    <string name="alarma_hora">Hora: %1$s</string>

    <!-- Mensajes perfil-->
    <string name="perfil_actualizado">Cambios guardados correctamente.</string>

</resources>
