<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:label="Perfil"
    android:id="@+id/activity_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.prova.inviare.PerfilActivity">

    <include
        android:id="@+id/toolbar_perfil"
        layout="@layout/tool_bar_perfil"
        ></include>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unknown"
        android:id="@+id/imageView_perfil"
        android:padding="@dimen/perfil_padding_image"
        android:maxHeight="@dimen/max_size_128"
        android:maxWidth="@dimen/max_size_128"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText__perfil_nombre"
        android:hint="@string/nombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_perfil_estado"
        android:hint="@string/estado" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_perfil_tlfn"
        android:hint="@string/telefono" />

    <TextView
        android:text="@string/correo_electronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_correo_titulo" />

    <TextView
        android:text="Correo electrónico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_correo"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

</LinearLayout>
