<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/card_view_A">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView_titulo_AP"
            android:text="Tipo de alarma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9e9e9e" />

        <TextView
            android:text="Mensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/separacion_alarma_V1"
            android:id="@+id/textView_mensaje_A"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:layout_marginBottom="@dimen/separacion_alarma_V2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_horaInicio">

            <TextView
                android:text="@string/lista_chat_hora_inicio_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_horaInicio_APt"
                android:paddingEnd="@dimen/lista_chat_padding_fechas" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_horaInicio_AP" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lista_chat_hora_duracion_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_horaDuracion_At"
                android:paddingEnd="@dimen/lista_chat_padding_fechas" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_horaDuracion_A" />
        </LinearLayout>

        <TextView
            android:text="Frecuencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_frecuencia_AP"
            android:layout_marginBottom="@dimen/chat_alarma_colapso_fecha" />

        <TextView
            android:text="Hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_hora_A"
            android:gravity="end" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_alarma_botones">

            <Button
                android:text="@string/declinar_tarea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_declinar_tarea"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_light"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:text="@string/tarea_terminada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_tareaRealizada"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark" />
        </LinearLayout>

        <TextView
            android:text="Curso tarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_contestacion_A"
            android:textAppearance="@android:style/TextAppearance.Material.Body2"
            android:gravity="center"
            android:visibility="gone" />

    </LinearLayout>
</android.support.v7.widget.CardView>